package com.example.android.botify.menu.sub.audio

//TODO security of classes without access modifiers?
class Audio (
    val id: Long,
    val name: String,
    val audio: Int?
        )